# agentbeats-corebench

./: .gitignore  README.md  pyproject.toml  sample.env
.github/workflows/: publish.yml
scenarios/corebench/: Dockerfile.corebench-agent  Dockerfile.corebench-evaluator  README.md  capsule_extension.json  capsule_extension.json.gpg  core_test.json  core_test.json.gpg  corebench_agent.py  corebench_evaluator.py  mcp_server.py  mdconvert.py  metrics.py  model_prices.py  phoenix_exporter.py  planning_prompts.yaml  scenario.toml  shared_logging.py  test_mcp_tools_jsonrpc_full.py
scenarios/corebench/metrics/: Capsule_Schemas.md  README.md  README_Schemas.md  TASK_ADHERENCE.md  __init__.py  compare_runs.py  compare_scores.sh  metrics.py  models.py  trace_prettify.py
scenarios/corebench/metrics/consistency-tests/: README.md  run_batch_consistency.py
scenarios/corebench/metrics/internal/: LLM_JUDGE_CONSISTENCY.md  METHODOLOGY.md  TASK_ADHERENCE.md
scenarios/tau2/: tau2_agent.py  tau2_evaluator.py
src/agentbeats/: client.py  run_scenario.py
