[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentbeats-corebench"
version = "0.1.0"
description = "Agentbeats CORE-Bench"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.3.5",
    "beautifulsoup4>=4.14.3",
    "duckduckgo-search>=8.1.1",
    "fastmcp>=2.14.0",
    "ipython>=9.8.0",
    "jupyter-core>=5.9.1",
    "litellm>=1.0.0",
    "loguru>=0.7.0",
    "lxml>=6.0.2",
    "mammoth>=1.11.0",
    "markdownify>=1.2.2",
    "nbconvert>=7.16.6",
    "notebook>=7.5.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pdfminer-six>=20251230",
    "puremagic>=1.30",
    "pydantic>=2.11.9",
    "pydub>=0.25.1",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.1.1",
    "python-pptx>=1.0.2",
    "requests>=2.32.5",
    "speechrecognition>=3.14.5",
    "scipy>=1.15.2",
    "tiktoken>=0.12.0",
    "uvicorn>=0.35.0",
    "youtube-transcript-api>=1.2.3",
    "gdown>=4.7.1"
]

[project.scripts]
agentbeats-run = "agentbeats.run_scenario:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "mypy>=1.18.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/agentbeats"]
